# backend/src/entities/User.js
@@ -1,5 +1,5 @@
 class UserEntity {
-    constructor({ id, email, name, founderId = null, investorId = null, password, isActive = true }) {
+    constructor({ id, email, name, password, created_at, updated_at }) {
         if (!email) throw new Error("Email is required");
         if (!name) throw new Error("Name is required");
         if (!password) throw new Error("Password is required");
@@ -7,10 +7,9 @@ class UserEntity {
         this.id = id;
         this.email = email;
         this.name = name;
-        this.founderId = founderId;
-        this.investorId = investorId;
         this.password = password;
-        this.isActive = isActive;
+        this.created_at = created_at || new Date();
+        this.updated_at = updated_at || new Date();
     }
 
     toObject() {
@@ -18,9 +17,9 @@ class UserEntity {
             id: this.id,
             email: this.email,
             name: this.name,
-            founderId: this.founderId,
-            investorId: this.investorId,
-            isActive: this.isActive
+            password: this.password,
+            created_at: this.created_at,
+            updated_at: this.updated_at
         };
     }
 
